# Changelog

// Asciidoc template for a single table row. Copy the lines
// within //// ... //// over into the current, unreleased version
// table, select the proper icon (see legend at the bottom of this documents)
// and adapt the link to point to your pull request. Please dont forget
// the empty line separators.

////
| 🎁🐛✨🐣🗑️
|
| https://github.com/knative/client/pull/[#]
////

## v0.14.0 (2020-04-21)

[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| ✨
| Moved to ApiServerSource v1alpha2 API version
| https://github.com/knative/client/pull/810[#810]

| ✨
| Update to Knative serving and eventing 0.14.0
| https://github.com/knative/client/pull/810[#810]

| 🐛
| Check DeleteTimestamp before updating resource
| https://github.com/knative/client/pull/805[#805]

| 🎁
| Allow plugins to extend fixed list of command groups, currently `source`
| https://github.com/knative/client/pull/818[#818]

| 🎁
| Add `-a` flag as an alias for `--annotation`
| https://github.com/knative/client/pull/782[#782]

|===

## v0.13.2 (2020-04-15)

[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🐛
| Make wait, no-wait and async flags per bool var CLI convention
| https://github.com/knative/client/pull/802[#802]

| 🐛
| Fix showing repetitive revisions in service describe
| https://github.com/knative/client/pull/790[#790]

| 🎁
| Add `--concurrency-utilization` option for service `create` and `update`
| https://github.com/knative/client/pull/788[#788]

| 🐛
| Correct error message when updating service
| https://github.com/knative/client/pull/778[#778]

| 🐛
| Add support for `-o name` for "list" operations
| https://github.com/knative/client/pull/775[#775], https://github.com/knative/client/pull/799[#799]

| 🐛
| Fix plugin lookup with file ext on Windows
| https://github.com/knative/client/pull/774[#774]

| 🐣
| Don't wait for delete operations to be completed by default
| https://github.com/knative/client/pull/770[#770]

| 🐣